[package]
name = "zepter"
version = "1.88.0"
edition = "2021"
authors = ["Oliver Tale-Yazdi"]
description = "Analyze, Fix and Format features in your Rust workspace."
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/zepter"
# Update the README if you change this:
rust-version = "1.88"
keywords = ["features", "formatting", "linting"]
categories = ["development-tools"]

[[bin]]
name = "zepter"

[[bench]]
name = "dag"
harness = false
required-features = ["benchmarking"]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
assert_cmd = { version = "2.2.0", optional = true }
camino = "1.2.2"
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["cargo", "derive"] }
colour = { version = "2.1.0", optional = true }
criterion = { version = "0.8", optional = true }
env_logger = { version = "0.11.10", features = [
	"auto-color",
	"humantime",
], optional = true }
histo = { version = "1.0.0", optional = true }
itertools = "0.14.0"
log = { version = "0.4.29", optional = true }
regex = "1.12.3"
semver = "1"
serde = "1.0.219"
serde_json = { version = "1.0.149", optional = true }
serde_yaml_ng = "0.10.0"
tempfile = { version = "3.27.0", optional = true }
toml_edit = "0.25.6"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
glob = "0.3.2"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
rand = "0.10.1"
rstest = "0.26.1"
serde = "1.0.219"
zepter = { path = ".", features = ["testing"] }

[features]
default = ["logging"]
logging = ["dep:env_logger", "dep:log"]
benchmarking = ["dep:criterion", "dep:serde_json"]
testing = [
	"dep:anyhow",
	"dep:assert_cmd",
	"dep:colour",
	"dep:serde_json",
	"dep:tempfile",
]
debugging = ["dep:histo"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

# Improves speed of the DAG logic by 4-20%. Normally `cargo metadata` is magnitudes slower, so we
# dont sacrifice (human) compile time for this negligible speedup.
[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "optimized"
